--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "compression": "^1.7.3",    
+    "compression": "^1.7.3",
+    "config": "^2.0.1",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "moment": "^2.22.2",
     "mongoose": "^5.2.13",
     "multer": "^1.3.1",
     "npm": "^6.4.1",
-    "papaparse": "^4.6.0"    
+    "papaparse": "^4.6.0"
   }
 }
