--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "config": "^2.0.1",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "joi": "^13.6.0",
+    "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "mongoose": "^5.2.13",
     "morgan": "^1.9.1",
@@ -26,6 +28,5 @@
     "npm": "^6.4.1",
     "papaparse": "^4.6.0"
   },
-  "devDependencies": {   
-  }
+  "devDependencies": {}
 }
