--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index",
+    "server": "nodemon index",
+    "client-install": "npm install --prefix client",
+    "client-server": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client-server\" "
   },
   "engines": {
     "node": "10.9.0"
@@ -28,5 +32,7 @@
     "npm": "^6.4.1",
     "papaparse": "^4.6.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "concurrently": "^4.0.1"
+  }
 }
