--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "morgan": "^1.9.1",
     "multer": "^1.3.1",
     "npm": "^6.4.1",
-    "papaparse": "^4.6.0"
+    "papaparse": "^4.6.0",
+    "winston-mongodb": "^3.0.0"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
