--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compression": "^1.7.3",
     "config": "^2.0.1",
     "express": "^4.16.3",
+    "express-async-errors": "^2.1.0",
     "helmet": "^3.13.0",
     "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
@@ -31,6 +32,7 @@
     "multer": "^1.3.1",
     "npm": "^6.4.1",
     "papaparse": "^4.6.0",
+    "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
   },
   "devDependencies": {
