--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon index",
     "client-install": "npm install --prefix client",
     "client-server": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client-server\" "
+    "dev": "concurrently \"npm run server\" \"npm run client-server\" ",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run client-install && npm run build --prefix client"
   },
   "engines": {
     "node": "10.9.0"
@@ -32,6 +33,7 @@
     "multer": "^1.3.1",
     "npm": "^6.4.1",
     "papaparse": "^4.6.0",
+    "path": "^0.12.7",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
   },
