--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "server": "nodemon index",
     "client-install": "npm install --prefix client",
     "client-server": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client-server\" ",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run client-install && npm run build --prefix client"
+    "dev": "concurrently \"npm run server\" \"npm run client-server\" "    
   },
   "engines": {
     "node": "10.9.0"
